--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3778,6 +3778,9 @@ h6,
 #menu-e6 .close-icon::after {
   background-color: #ffffff;
 }
+#msg-box5-ex H3 {
+  color: #ffffff;
+}
 #custom-html-ek .header-container {
   background-color: #174034;
   height: 30vh;
@@ -3811,7 +3814,7 @@ h6,
   color: white;
 }
 #custom-html-ek .text-question-container {
-  height: 60vh;
+  height: auto;
   background-color: #91bdae;
   display: flex;
   justify-content: center;
@@ -3845,7 +3848,8 @@ h6,
   cursor: pointer;
 }
 #custom-html-ek .picture-question-container {
-  height: 60vh;
+  padding: 10vh 0 10vh 0;
+  height: auto;
   background-color: #91bdae;
   display: flex;
   justify-content: center;
@@ -3938,5 +3942,238 @@ h6,
 }
 #menu-el .close-icon::before,
 #menu-el .close-icon::after {
+  background-color: #ffffff;
+}
+#menu-ey .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-ey .navbar-caption {
+  color: #ffffff;
+}
+#menu-ey .navbar-toggler {
+  color: #ffffff;
+}
+#menu-ey .link,
+#menu-ey .dropdown-item {
+  color: #ffffff;
+}
+#menu-ey .link {
+  font-size: 0.75rem;
+}
+#menu-ey .dropdown-item,
+#menu-ey .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-ey .link:hover,
+#menu-ey .dropdown-item:hover,
+#menu-ey .link:focus,
+#menu-ey .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-ey .link[aria-expanded="true"],
+#menu-ey .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-ey .nav-dropdown-sm .link:focus,
+#menu-ey .nav-dropdown-sm .link:hover,
+#menu-ey .nav-dropdown-sm .dropdown-item:focus,
+#menu-ey .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-ey .navbar,
+#menu-ey .nav-dropdown-sm,
+#menu-ey .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-ey .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-ey .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-ey .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-ey .bg-color.transparent.opened .link:hover,
+#menu-ey .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-ey .link[aria-expanded="true"],
+#menu-ey .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-ey.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-ey .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-ey .close-icon::before,
+#menu-ey .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box5-f0 H3 {
+  color: #ffffff;
+}
+#custom-html-f1 .header-container {
+  background-color: #174034;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-html-f1 .header-text {
+  color: white;
+  font-weight: bold;
+  font-size: 400%;
+  width: 50%;
+  text-align: center;
+}
+#custom-html-f1 #answer-container {
+  background-color: #174034;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-html-f1 #result-container {
+  margin: auto;
+  width: 50%;
+}
+#custom-html-f1 #title-text {
+  color: white;
+  font-weight: bold;
+}
+#custom-html-f1 #desc-text {
+  color: white;
+}
+#custom-html-f1 .text-question-container {
+  height: auto;
+  background-color: #91bdae;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-html-f1 .text-answer {
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#custom-html-f1 .text-container {
+  width: 100%;
+  height: 100%;
+  background-color: #174034;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-html-f1 .image-checkbox {
+  display: none;
+}
+#custom-html-f1 .image-checkbox + label {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  cursor: pointer;
+}
+#custom-html-f1 .picture-question-container {
+  padding: 10vh 0 10vh 0;
+  height: auto;
+  background-color: #91bdae;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-html-f1 .picture-container {
+  width: 20vw;
+  height: 25vh;
+  margin: .5vw .5vw;
+  overflow: hidden;
+  background: white;
+}
+#custom-html-f1 .image-answer {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#custom-html-f1 .image-checkbox:checked + label:hover {
+  -moz-transition: ease 0.3s ;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s;
+}
+#custom-html-f1 .image-checkbox:not(:checked):not(.no-hover) + label:hover {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+#menu-f2 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-f2 .navbar-caption {
+  color: #ffffff;
+}
+#menu-f2 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-f2 .link,
+#menu-f2 .dropdown-item {
+  color: #ffffff;
+}
+#menu-f2 .link {
+  font-size: 0.75rem;
+}
+#menu-f2 .dropdown-item,
+#menu-f2 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-f2 .link:hover,
+#menu-f2 .dropdown-item:hover,
+#menu-f2 .link:focus,
+#menu-f2 .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-f2 .link[aria-expanded="true"],
+#menu-f2 .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-f2 .nav-dropdown-sm .link:focus,
+#menu-f2 .nav-dropdown-sm .link:hover,
+#menu-f2 .nav-dropdown-sm .dropdown-item:focus,
+#menu-f2 .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-f2 .navbar,
+#menu-f2 .nav-dropdown-sm,
+#menu-f2 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-f2 .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-f2 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-f2 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-f2 .bg-color.transparent.opened .link:hover,
+#menu-f2 .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-f2 .link[aria-expanded="true"],
+#menu-f2 .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-f2.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-f2 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-f2 .close-icon::before,
+#menu-f2 .close-icon::after {
   background-color: #ffffff;
 }
